--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vercel/edge-config": "^0.4.1",
     "framer-motion": "^10.16.5",
     "json-server": "^0.17.4",
+    "lodash": "^4.17.21",
     "npm-run-all": "^4.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
